<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.defridgerator.RefrigerateFragment"
    android:id="@+id/refrigerate_layout">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:singleLine="true"
        android:layout_margin="20dp"/>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/hint_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_textview"
        android:layout_margin="20dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/button_exp_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exp_date"
        android:layout_below="@id/edit_name"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/button_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:onClick="OnClick_AddToFridge"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"/>

    <TextView
        android:id="@+id/amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_textview"
        android:textSize="20sp"
        android:layout_alignTop="@+id/amount_numberpicker"
        android:layout_alignLeft="@+id/button_add_item"
        android:layout_alignStart="@+id/button_add_item"
        android:layout_marginTop="50dp" />

    <NumberPicker
        android:id="@+id/amount_numberpicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_add_item"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>
